<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Umpire Buddy</string>
	<string name="ball_text_label">Ball:</string>
	<string name="ball_button_label">Ball</string>
	<string name="strike_text_label">Strike:</string>
	<string name="strike_button_label">Strike</string>
	<string name="strike_out_text">Out!</string>
	<string name="walk_text">Walk!</string>
	<string name="alert_confirm">OK</string>
	<string name="action_about">About</string>
	<string name="action_reset">Reset</string>
	<string name="title_activity_about">About</string>
	<string name="about">Umpire Buddy by Shawn Mathes</string>
	<string name="more_info">More Info</string>
	<string name="message">Message</string>
	<string name="total_outs_text_label">Total outs:</string>
	<string name="title_activity_settings">Settings</string>
	<string name="action_settings">Settings</string>
	<string name="pref_audible_announcement_title">Announce out/walk</string>
	<string name="pref_audible_announcement_summary">Announce "out" and "walk" audibly.</string>

</resources>
